Security fix and other stuff

--- a/britto.html
+++ b/britto.html
@@ -1,5 +1,5 @@
 <head>
-  <title>Britto</title>
+  <title>Britto - Blogging made better</title>
 </head>
 
 <body>
@@ -50,6 +50,10 @@
         <div class="control-group">
           <label for="post-body" class="control-label">Body</label>
           <div class="controls"><textarea id="post-body" ></textarea></div>
+        </div>
+        <div class="control-group">
+          <label for="post-slug" class="control-label">Slug</label>
+          <div class="controls"><input type="text" id="post-slug" /></div>
         </div>
         <div class="form-actions">
           <button class="btn btn-primary" id="post-button" >Post</button>
